syntax = "proto3";

package chora.admin.v1;

import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/chora-io/mods/admin/types/v1";

// Msg is the Msg service.
service Msg {

  // UpdateAdmin updates the admin account.
  rpc UpdateAdmin(MsgUpdateAdmin) returns (MsgUpdateAdminResponse);
}

// MsgUpdateAdmin is the Msg/UpdateAdmin request type.
message MsgUpdateAdmin {
  option (cosmos.msg.v1.signer) = "admin";

  // admin is the address of the admin account.
  string admin = 1;

  // new_admin is the address of the new admin account.
  string new_admin = 2;
}

// MsgUpdateAdminResponse is the Msg/UpdateAdmin response type.
message MsgUpdateAdminResponse {

  // admin is the address of the admin account.
  string admin = 1;

  // new_admin is the address of the new admin account.
  string new_admin = 2;
}
